traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:31: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalZigZag:34: error: expected start of definition
	override def forward()  {
                 ^TraversalZigZag:37: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalZigZag:40: error: expected start of definition
	override def backward() {
                 ^TraversalZigZag:43: error: Unmatched closing brace '}' ignored here
}
^